<resources>
    <string name="app_name">Prova</string>
    <string name="title_activity_login">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu__principal">Menu_Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- RES/MENU/menu__principal -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="Hello_List">Hello My List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Hello_Tags">Hello Tags</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="String_Home">Hello blank fragment</string>
    <string name="ChangePass">Change your password</string>
    <string name="oldPass">Old password</string>
    <string name="newPass">New password</string>
    <string name="reNewPass">Repeat the new password</string>
    <string name="BttnChange">Change</string>
</resources>
