<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/Blue"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:text="@string/ChangePass"
        android:layout_gravity="center"
        />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/divider_horizontal_dim_dark"
          />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldPass"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:paddingBottom="@dimen/center_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textSize="20sp"
            android:background="@drawable/edittext"
            android:id="@+id/editOldPassword"
            android:inputType="textVisiblePassword"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPass"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:paddingBottom="@dimen/center_margin"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:textSize="20sp"
            android:background="@drawable/edittext"
            android:id="@+id/editNewPassword"
            android:inputType="textVisiblePassword"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reNewPass"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:paddingBottom="@dimen/center_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/edittext"
            android:id="@+id/editRepeatNewPassword"
            android:inputType="textVisiblePassword"/>



    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/divider_horizontal_dim_dark"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/BttnChange"
        android:id="@+id/bttnChange"/>
</LinearLayout>
